<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Camera Map</string>
    <string name="form">Camera Map: Upload camera</string>
    <string name="map">Camera Map: View Google Maps</string>
    <string name="camera">Camera Map: Gallery</string>
    <string name="login">Camera Map: Login</string>
    <string name="createAccount">Camera Map: Create Account</string>
    <string name="cameraType">Camera type</string>
    <string name="cameraAlert">Camera alert</string>
    <string name="cameraState">Camera state</string>
    <string name="mQuit">QUIT</string>
    <string name="mUpload">UPLOAD</string>
    <string name="mAbout">ABOUT</string>
    <string name="mStreet">STREET VIEW</string>
    <string name="mSat">SATELLITE VIEW</string>
	<string name="cameraAR">Camera Map: Augmented Reality</string>
	<string name="auth_url">http://cameramap.addsensor.com/accounts/iphone_user_check/</string>
    <string name="background">background</string>
    <string name="login_button">login</string>
    <string name="login_tag">Login:</string>
    <string name="checkbox_text">remember my account</string>
    <string name="pass_text">Password:</string>
    <string name="caccount_button">Create Account</string>
    <string name="caccount_rpass">Repeat Password:</string>
    <string name="caccount_pass">Password:</string>
    <string name="caccount_email">Email:</string>
    <string name="caccount_uname">User name:</string>
    <string name="caccount_surname">Surname:</string>
    <string name="account_name">Name:</string>
    <string name="main_create_account_button">Create Account</string>
    <string name="main_login_button">Login</string>
    <string name="form_button_upload">Upload...</string>
    <string name="form_button_viewmap">ViewMap</string>
    <string name="form_text_comments">Comments:</string>
    <string name="form_text_location">Location:</string>
    <string name="form_text_privatepublic">Private/Public:</string>
    <string name="form_text_alert">Alert of vigilance:</string>
    <string name="form_text_typocamara">Type of camera:</string>
    <string name="form_button_search">Search...</string>
    <string name="form_button_camera">Camera...</string>
</resources>
